@@ -1,5 +1,5 @@
 #Statistics for merged alignment. 
-#Thu Jun 09 13:18:17 EDT 2011
+#Wed Jun 29 15:00:48 EDT 2011
 number.of.queries=27
 min.query.index=0
 max.query.index=26
